Fix collapse navbar problem

--- a/Klapaffaires/web/css/style.css
+++ b/Klapaffaires/web/css/style.css
@@ -18,7 +18,58 @@ hr {
 }
 
 /* Navbar */
+@media (max-width: 980px) {
+    .navbar-header {
+        float: none;
+    }
+    .navbar-right {
+        float: none;
+    }
+    .navbar-toggle {
+        display: block;
+    }
+    .navbar-collapse {
+        float: right;
+    }
 
+    .navbar-fixed-top {
+        top: 0;
+        border-width: 0 0 1px;
+    }
+    .navbar-collapse.collapse {
+        display: none!important;
+    }
+    .navbar-nav {
+        float: none!important;
+        margin-top: 7.5px;
+    }
+    .navbar-nav>li {
+        float: none;
+    }
+
+    .navbar-nav>li>a {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    .collapse.in{
+        display:block !important;
+        float: right;
+    }
+
+    .collapse.in li {
+    }
+    .navbar-nav .open .dropdown-menu {
+        position: static;
+        float: right;
+        width: auto;
+        margin-top: 0;
+        background-color: transparent;
+        border: 0;
+        -webkit-box-shadow: none;
+        box-shadow: none;
+    }
+
+}
 .navbar-header img {
     width: 180px;
 }
